<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vinaykumarg.myapplication.RegistrationActivity">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/head"
           android:orientation="horizontal">
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:orientation="vertical">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/reference_no"/>
               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/adhaar"/>
           </LinearLayout>
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/passportphoto"
               android:layout_weight="1"
               android:src="@drawable/passport"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/head"
           android:id="@+id/mid"
           android:orientation="vertical">
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/name"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/phone"/>
           <io.blackbox_vision.datetimepickeredittext.view.DatePickerEditText
               android:id="@+id/datePickerEditText"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:drawableRight="@drawable/calender"
               android:layout_marginBottom="8dp"
               android:hint="@string/select_date"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/email"/>
       </LinearLayout>
       <TextView
           android:layout_below="@+id/mid"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/margin_top"
           android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
           android:text="@string/fathername"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <EditText
               android:layout_width="wrap_content"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:hint="@string/fname"/>
           <EditText
               android:layout_width="wrap_content"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:hint="@string/lname"/>
       </LinearLayout>
       <TextView
           android:layout_below="@+id/mid"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
           android:layout_marginTop="@dimen/margin_top"
           android:text="@string/mothername"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <EditText
               android:layout_width="wrap_content"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:hint="@string/fname"/>
           <EditText
               android:layout_width="wrap_content"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:hint="@string/lname"/>
       </LinearLayout>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textAlignment="center"
           android:textSize="@dimen/signup_textsize"
           android:textColor="@color/black"
           android:text="@string/cadress"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/ad1"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/ad2"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <EditText
               android:layout_width="@dimen/length_editext2"
               android:layout_height="wrap_content"
               android:hint="@string/pcode"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/city"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/dist"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/state"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <CheckBox
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/sameas"/>
       </LinearLayout>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textAlignment="center"
           android:textSize="@dimen/signup_textsize"
           android:textColor="@color/black"
           android:text="@string/paddress"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/ad1"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/ad2"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <EditText
               android:layout_width="@dimen/length_editext2"
               android:layout_height="wrap_content"
               android:hint="@string/pcode"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/city"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/dist"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/state"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <fr.ganfra.materialspinner.MaterialSpinner
               android:id="@+id/religionspinner"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:layout_margin="@dimen/margin_left"
               app:ms_hint="Religion"/>
           <fr.ganfra.materialspinner.MaterialSpinner
               android:id="@+id/genderspinner"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:layout_margin="@dimen/margin_left"
               app:ms_hint="Gender"/>
           <fr.ganfra.materialspinner.MaterialSpinner
               android:id="@+id/maritalspinner"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:layout_margin="@dimen/margin_left"
               app:ms_hint="Marital Status"/>
       </LinearLayout>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:text="@string/arecord"
           android:textColor="@color/black"
           android:textSize="@dimen/signup_textsize"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <fr.ganfra.materialspinner.MaterialSpinner
               android:id="@+id/examlevelspinner"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/margin_left"
               app:ms_hint="@string/examlevel"/>
           <fr.ganfra.materialspinner.MaterialSpinner
               android:id="@+id/passyearspinner"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/margin_left"
               app:ms_hint="@string/passyr"/>
           <fr.ganfra.materialspinner.MaterialSpinner
               android:id="@+id/boardspinner"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/margin_left"
               app:ms_hint="@string/board"/>
           <EditText
               android:layout_width="@dimen/length_editext2"
               android:layout_height="wrap_content"
               android:hint="@string/marks"/>
           <EditText
               android:layout_width="@dimen/length_editext2"
               android:layout_height="wrap_content"
               android:hint="@string/grade"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/majorsubject"/>
           <fr.ganfra.materialspinner.MaterialSpinner
               android:id="@+id/castspinner"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/margin_left"
               app:ms_hint="@string/cast"/>
           <fr.ganfra.materialspinner.MaterialSpinner
               android:id="@+id/postspinner"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/margin_left"
               app:ms_hint="@string/postheld"/>
       </LinearLayout>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="@dimen/signup_textsize"
           android:textColor="@color/black"
           android:textAlignment="center"
           android:layout_marginTop="@dimen/margin_top"
           android:text="@string/details"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <fr.ganfra.materialspinner.MaterialSpinner
               android:id="@+id/offcspinner"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/margin_left"
               app:ms_hint="@string/offc"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <io.blackbox_vision.datetimepickeredittext.view.DatePickerEditText
                   android:id="@+id/fromdateET"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:drawableEnd="@drawable/calender"
                   android:layout_marginBottom="8dp"
                   android:hint="@string/from"/>
               <io.blackbox_vision.datetimepickeredittext.view.DatePickerEditText
                   android:id="@+id/todateET"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:layout_marginEnd="@dimen/margin_top"
                   android:drawableEnd="@drawable/calender"
                   android:layout_marginBottom="8dp"
                   android:hint="@string/to"/>
           </LinearLayout>
           <fr.ganfra.materialspinner.MaterialSpinner
               android:id="@+id/scalespinner"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/margin_left"
               app:ms_hint="@string/scale"/>
           <fr.ganfra.materialspinner.MaterialSpinner
               android:id="@+id/dutyspinner"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/margin_left"
               app:ms_hint="@string/duty"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/employment"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/emoluments_per_month"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/addtl_information"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/remarks"/>
       </LinearLayout>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textAlignment="center"
           android:textSize="@dimen/signup_textsize"
           android:textColor="@color/black"
           android:text="@string/proff_exp"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <fr.ganfra.materialspinner.MaterialSpinner
               android:id="@+id/postnamespinner"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/margin_left"
               app:ms_hint="@string/postname"/>
           <fr.ganfra.materialspinner.MaterialSpinner
               android:id="@+id/orga_name_spinner"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/margin_left"
               app:ms_hint="@string/org_name"/>
           <fr.ganfra.materialspinner.MaterialSpinner
               android:id="@+id/durationspinner"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/margin_left"
               app:ms_hint="@string/duration"/>
           <fr.ganfra.materialspinner.MaterialSpinner
               android:id="@+id/jdspinner"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/margin_left"
               app:ms_hint="@string/jd"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="@dimen/activity_horizontal_margin"
               android:layout_marginRight="@dimen/activity_horizontal_margin"
               android:orientation="horizontal">
               <CheckBox
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/certify"
                   android:paddingBottom="@dimen/margin_top"/>
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <io.blackbox_vision.datetimepickeredittext.view.DatePickerEditText
                   android:id="@+id/dateET"
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:layout_marginEnd="@dimen/margin_top"
                   android:drawableEnd="@drawable/calender"
                   android:hint="@string/to"/>
               <EditText
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:hint="@string/fullname"/>
           </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/signature"
            android:src="@drawable/signature"/>
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:textAppearance="@style/TextAppearance.AppCompat.Small"
               android:textColor="@color/white"
               android:padding="@dimen/margin_top"
               android:background="@color/getstarted"
               android:text="@string/register"/>
       </LinearLayout>
   </LinearLayout>
</ScrollView>
