<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.vinaykumarg.myapplication.SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fullname"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/fname"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/lname"/>
    </LinearLayout>

    <io.blackbox_vision.datetimepickeredittext.view.DatePickerEditText
        android:id="@+id/datePickerEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/calender"
        android:hint="@string/select_date"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"/>
        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/locationspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ms_hint="Current Location"/>
        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/experiencespinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ms_hint="@string/exp"/>
        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/qualificationspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ms_hint="@string/qualification"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/func"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:paddingLeft="@dimen/margin_top"
                android:paddingRight="@dimen/margin_top"
                android:id="@+id/submit"
                android:background="@color/getstarted"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</ScrollView>
