<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:background="@color/white"
    android:weightSum="5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vinaykumarg.myapplication.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true"
        android:id="@+id/flag"
        android:src="@drawable/home"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_flag"
        android:layout_below="@+id/flag"
        android:id="@+id/body"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/title"
            android:textSize="@dimen/gj_textsize"
            android:layout_height="wrap_content"
            android:text="@string/app_heading"
            android:textAlignment="center" />
        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:id="@+id/signup"
            android:layout_marginTop="@dimen/vertical_spacing"
            android:textSize="@dimen/signup_textsize"
            android:layout_height="wrap_content"
            android:text="@string/app_signup" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:layout_marginTop="@dimen/vertical_spacing"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/length_icons"
                android:layout_height="@dimen/length_icons"
                android:src="@drawable/user_default"/>

            <EditText
                android:layout_width="@dimen/length_editext"
                android:layout_height="wrap_content"
                android:id="@+id/editText" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_spacing"
            android:id="@+id/phone"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/length_icons"
                android:layout_height="@dimen/length_icons"
                android:src="@drawable/call"/>

            <EditText
                android:layout_width="@dimen/length_editext"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/editText2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_marginTop="@dimen/vertical_spacing"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/length_icons"
                android:layout_height="@dimen/length_icons"
                android:src="@drawable/key"/>
            <com.xwray.passwordview.PasswordView
                android:layout_width="@dimen/length_editext"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/getstarted"
            android:padding="5sp"
            android:background="@color/getstarted"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/vertical_spacing"
            android:text="@string/getstarted"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/vertical_spacing"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/already"
                android:text="@string/have_account"/>
            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:textColor="@color/getstarted"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_top"
                android:text="@string/login"/>
        </LinearLayout>
    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:id="@+id/bottom_flag"
        android:paddingTop="@dimen/vertical_spacing"
        android:src="@drawable/gg"/>


</RelativeLayout>
